--- a/index.html
+++ b/index.html
@@ -1,15 +1,71 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
+</head>
+<body>
+         <h1>FARHAN WAHAB</h1>
+         <h3>ELECTRONICS AND COMMUNICATION ENGINEERING</h3>
+         <img src="./4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/assets/images/Pi7_Passport_Photo.jpeg" height="150" />
+         <hr/>
+    <h2>SUMMARY</h2>
+    <P> An Aspiring and motivated Engineering student with strong leadership, effective communication and problem
+ solving skills. Seeking a role that allows me to apply my knowledge and contribute to impactful projects while
+ gaining exposure to a dynamic work environment.</P>
+    <hr/>
+    <h2>EDUCATION</h2>
+    <ul><li>vasavi college of engineering</li>
+        <P>B.E ECE  (2021-2025)
+    <li>Sri Chaitanya Junior College</li>
+    <p>MPC (2019-2021)--- 98.7%
+    <li>Sri Chaitanya Techno School</li>
+    <p>SSC (2019)---10 GPA</p>
+    <hr/>
+   
+    <h2>SKILLS</h2>
+    <ul>
+        <li>Technical skills : JAVA, C, SQL, JavaScript, React, Front-end development, Microsoft Excel.</li>
+        <li>Oracle Fusion HCM Cloud: Core HR, Absence Management, Payroll, Talent Management, BI, OTBI.</li>
+        <li>Tools : Matlab, Vivado, proteus, Keil.</li>
+        <li>Soft-Skills : Leadership, Public speaking, effective communication and Team Management.</li>
+    </ul>
+    <hr/>
+    <h2>PROJECTS</h2>
+    <ul>
+        <h4> Path Memorizing Bluetooth Controlled Robot Car </h4>
+           <li>Developed a path memorizing robot car that repeats the action or path that is stored in it’s memory.</li>
+           <li> It is a human-assisted robotic system which can be easily controlled by using an android applicationl.</li>
+        <h4>Forest Surveillance System</h4>
+           <li>Developed an advanced forest surveillance system to detect and respond to fire incidents and
+ smoke presence in real-time.</li>
+           <li>Implemented machine learning algorithms for accurate detection.</li>
+           <li>Developed an efficient communication system to relay real-time alerts and images to forest
+ officials</li>
+        <h4> Age and Gender Recognition using Deep Learning</h4>
+           <li> Developed a simple Age and Gender Recognizing code using deep learning algorithm.</li>
+           <li>  Implemented convolutional neural network for image and object identification and classification.</li>
+        <h4>Buzz wire Game</h4>
+           <li>Developed a Buzz wire game with an LCD display to show points</li>
+       
+    </ul>
+    <hr/>
+    <h2>KEY COURSES TAKEN</h2>
+    <P> Cyber Security, Object-Oriented programming using java, python, Responsive Web DesigN</P>
+    <hr/>
+    <h2>ACCOMPLISHMENTS</h2>
+    <ul><li> Performed Thrice as lead singer in college musical band for an audience of 1500+</li>
+        <li> Nptel Certification for Problem Solving throu,gh Programming in C Language</li>
+        <li>Gold Medal for Winning intra-college Football Tournament</li>
+        <li>Served as NSS Student Volunteer and engaging in various social activities </li>
+    </ul>
+    <hr/>
+    <h2>OTHER</h2>
+    <ul>
+        <li><a href='./MY HOBBIES.html'>MY Hobbies</a></li>
+        <li><a href='./MY CONTACT DETAILS.html'>MY Contact</a></li>
+    </ul>
+<footer><p>Farhan wahab. All Rights reserved</p></footer>
+</body>
+</html>
